adjusted hr spacing issue

--- a/css/base.css
+++ b/css/base.css
@@ -52,5 +52,5 @@ hr.style-three {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     background-color: white;
-    margin: 0px;
+    margin: 0.83em 0;
 }
