--- a/css/modules.css
+++ b/css/modules.css
@@ -358,6 +358,7 @@
 }
 
 .skills-title {
+  margin: 0.83em 0;
   font-size: 2em;
   font-style: italic;
   letter-spacing: 1px;
